php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #32956 mysql_bind_result doesn't support MYSQL_TYPE_NULL
Submitted: 2005-05-05 14:54 UTC Modified: 2005-05-06 02:33 UTC
From: georg@php.net Assigned: georg (profile)
Status: Closed Package: MySQLi related
PHP Version: 5.0.4 OS: all
Private report: No CVE-ID: None
 [2005-05-05 14:54 UTC] georg@php.net
Description:
------------
mysqli_bind_result doesn't support MYSQL_TYPE_NULL. This causes libmysql to fail with error buffer_length=0.

Reproduce code:
---------------
<?php

$mysql = new mysqli("localhost", "root", "");

$stmt = $mysql->prepare("SELECT NULL FROM DUAL");
$stmt->execute();

$stmt->bind_result($val);
$stmt->fetch();

var_dump($val);

$stmt->close();
$mysql->close();
?>


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-05-06 02:33 UTC] sniper@php.net
Georg fixed this already, AFAICT.

 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 21:00:01 2026 UTC