ext/mysqli/tests/064.phpt
@@ -1,0 +1,21 @@
+--TEST--
+NULL binding 
+--SKIPIF--
+<?php require_once('skipif.inc'); ?>
+--FILE--
+<?php
+	include "connect.inc";
+
+	$mysql = new mysqli($host, $user, $passwd);
+
+	$stmt = new mysqli_stmt($mysql, "SELECT NULL FROM DUAL");
+	$stmt->execute();
+	$stmt->bind_result($foo);
+	$stmt->fetch();
+	$stmt->close();
+	$mysql->close();
+
+	var_dump($foo);
+?>
+--EXPECT--
+NULL
